hphp/hack/test/typecheck/typing_fail_return_option.php.exp
File "typing_fail_return_option.php", line 13, characters 6-6:
A semicolon (';') is expected here. (Parsing[1002])
